@@ -6,6 +6,7 @@
 
 #include "USART.hpp"
 #include "Processor.hpp"
+#include "Watchdog.hpp"
 
 
 //
@@ -13,8 +14,10 @@
 //
 int main(void)
 {
+  Watchdog  wdt;                    // use watchdog (disabled by default)
   Processor proc;                   // initialize processor
   USART::init();                    // configure serial interface
+  wdt.enable();                     // enable watchdog as the last step
 
   uint8_t   f=0;                    // poistion to write in buffer
   char      cmd[IO_BUFFER_SIZE];    // command buffer
@@ -24,6 +27,10 @@ int main(void)
   // main loop
   for(;;)
   {
+    // keep reseting watchdog while there is nothing to do
+    do { wdt.reset(); }
+    while( !USART::hasData() );
+
     // read char from port
     const char c=USART::receive();
 
