@@ -1,3 +1,7 @@
+-- v?? --
+* added watchdog for controlling uC's operations.
+* implemented reset, when USB is no longer in use, but poewr is still supplied.
+
 -- v0.4.1 --
 * added missing pull-down resistors from transistors' base to the ground.
 
